# dental-labs-backend

./: .gitignore  .pre-commit-config.yaml  alembic.ini  manage.py  pyproject.toml
.cursor/rules/: api-endpoint-complexity.mdc  api-versioning.mdc  architecture-decisions.mdc  architecture.mdc  config-conventions.mdc  csv-export-postgres-copy.mdc  docker.mdc  docstrings.mdc  error-catalog.mdc  fastapi-basics.mdc  fastapi-caching.mdc  fastapi-database.mdc  fastapi-error-handling.mdc  fastapi-idempotency.mdc  fastapi-logging.mdc  fastapi-middleware.mdc  fastapi-performance.mdc  fastapi-routing.mdc  fastapi-schemas.mdc  fastapi-testing.mdc  global.mdc  observability.mdc  openapi-swagger.mdc  performance-guardrails.mdc  security.mdc  sphinx-docs.mdc  type-hints.mdc
apps/auth/: .cursorrules  __init__.py  types.py
apps/auth/dependencies/: __init__.py  auth.py  rbac.py
apps/auth/helpers/: __init__.py  exceptions.py
apps/auth/models/: __init__.py  associations.py  group.py  profile.py  role.py  user.py
apps/auth/repository/: __init__.py
apps/auth/repository/bll/: __init__.py  user.py
apps/auth/repository/dal/: __init__.py  user.py
apps/auth/routers/: __init__.py  login.py  router.py  user.py
apps/auth/schemas/: __init__.py  group.py  role.py  token.py  user.py
apps/auth/utils/: __init__.py  jwt_validator.py  password.py
apps/core/: .cursorrules  __init__.py  app_factory.py  db.py  exceptions.py  middleware.py  openapi_docs.py  system_info.py  types.py  version.py
apps/core/cli/: __init__.py  db.py  downgrade.py  generate_secret_key.py  help.py  makemigrations.py  migrate.py  runserver.py  utils.py
apps/core/utils/: __init__.py  datetime_utils.py  pagination.py  security.py
config/logging/: __init__.py  config.py  handlers.py  interceptor.py  processors.py
config/metrics/: .cursorrules  __init__.py  database.py  http.py  middleware.py  service.py  system.py
config/migrations/: env.py  script.py.mako
config/migrations/versions/: 001f87525808_add_user_group_role.py  538abdc5aefe_add_profile.py  b918b4d48cb0_test.py
config/settings/: .cursorrules  __init__.py  settings.toml  validators.py
