[project]
name = "dental-lab-backend"
version = "0.1.0"
description = "its dental repo for ditect enemal, plum and dentin in images."
authors = [
    {name = "Hamidreza Hidary",email = "thecastleoffalcon@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.139.0,<0.140.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.6.0"
commitizen = "^4.16.4"
mypy = "^2.1.0"


[tool.poetry.group.prod.dependencies]
fastapi = "^0.139.0"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"          # bump this with `cz bump`
version_files = [
    "pyproject.toml:version",
]
tag_format = "v$version"
update_changelog_on_bump = true
major_version_zero = true    # 0.x.y → breaking changes bump minor
