[project]
name = "dental-lab-backend"
version = "0.1.0"
description = "its dental repo for ditect enemal, plum and dentin in images."
authors = [
    {name = "Hamidreza Hidary",email = "thecastleoffalcon@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "fastapi (>=0.139.0,<0.140.0)",
    "dynaconf (>=3.3.2,<4.0.0)",
    "uvicorn (>=0.50.1,<0.51.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.6.0"
commitizen = "^4.16.4"
mypy = "^2.1.0"


[tool.poetry.group.prod.dependencies]
fastapi = "^0.139.0"
dynaconf = "^3.3.2"
prometheus-client = "^0.25.0"
alembic = "^1.18.5"
uvicorn = "^0.50.1"
typer = "^0.26.8"
manage = "^0.1.15"
redis = "^8.0.1"
asyncpg = "^0.31.0"
structlog = "^26.1.0"
loguru = "^0.7.3"
greenlet = "^3.5.3"
orjson = "^3.11.9"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"          # bump this with `cz bump`
version_files = [
    "pyproject.toml:version",
]
tag_format = "v$version"
update_changelog_on_bump = true
major_version_zero = true    # 0.x.y → breaking changes bump minor
